[package]
name = "launcher"
edition = "2024"
version = "0.0.1"

[dependencies]
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
] }
